# Assembler

./: .gitignore  CMakeLists.txt  README.md  assembler.c  errors.c  errors.h  first_pass.c  first_pass.h  globals.c  globals.h  integer_utils.c  integer_utils.h  label.c  label.h  macr.c  macr.h  main.c  opcode_utils.c  opcode_utils.h  out.txt  preprocessor.c  preprocessor.h  test.txt  token_utils.c  token_utils.h
Build and Configuration/: CMakeLists.txt  assembler  makefile
Header Files/: errors.h  errors_handling.h  file_utils.h  first_pass.h  globals.h  integer_utils.h  label.h  macr.h  opcode_utils.h  preprocessor.h  second_pass.h  token_utils.h
HeaderFiles/: errors_handling.h  file_utils.h  first_pass.h  globals.h  integer_utils.h  label.h  macr.h  opcode_utils.h  preprocessor.h  second_pass.h  token_utils.h
Invalid Input/: broken_program4.as
Invalid Inputs/: broken_program1.as  broken_program2.as  broken_program5.as  invalid_input3.as
InvalidInputs/: broken_program1.as  broken_program2.as  broken_program3.as  broken_program4.as  broken_program5.as
Source Files/: assembler.c  errors.c  errors_handling.c  file_utils.c  first_pass.c  globals.c  integer_utils.c  label.c  macr.c  opcode_utils.c  preprocessor.c  second_pass.c  token_utils.c
SourceFiles/: assembler.c  errors_handling.c  file_utils.c  first_pass.c  globals.c  integer_utils.c  label.c  macr.c  opcode_utils.c  preprocessor.c  second_pass.c  token_utils.c
Valid Input/: even_odd.as  fibonacci.as  text_encryption.as
Valid Inputs/: string_length.as  text_reverse.as
ValidInputs/: even_odd.as  (+4 more)
(+41 files in other folders)
